[gd_scene load_steps=4 format=3 uid="uid://bul7fpmury427"]

[ext_resource type="Script" path="res://current/menus/accessibility_menu/accessibility_menu.gd" id="1_7wl3y"]
[ext_resource type="Script" uid="uid://bhyb47b27e03q" path="res://current/scripts/node/rich_text_label.gd" id="2_4yg4i"]
[ext_resource type="Texture2D" uid="uid://dv4n5etipadpk" path="res://current/assets/ui/btn_sized.png" id="3_pvipk"]

[node name="DebugMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7wl3y")

[node name="ColorRect" type="ColorRect" parent="."]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
offset_left = 320.0
offset_top = 64.0
offset_right = 1600.0
offset_bottom = 1024.0
size_flags_vertical = 3
color = Color(0, 0.145098, 0.129412, 0.788235)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 384.0
offset_top = 128.0
offset_right = 1536.0
offset_bottom = 960.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Fov" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="Fov Text" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/Fov"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]FOV[/center]"
fit_content = true
script = ExtResource("2_4yg4i")

[node name="Fov_Slider" type="HSlider" parent="ScrollContainer/VBoxContainer/Fov"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
min_value = 10.0
max_value = 150.0
value = 80.0
rounded = true

[node name="Font Size Warning" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]Font Size

Note: Extreme font sizes may look strange[/center]"
fit_content = true
script = ExtResource("2_4yg4i")

[node name="TextSize" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/TextSize"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]EXAMPLE TEXT
example text[/center]"
fit_content = true
script = ExtResource("2_4yg4i")

[node name="Text_Size_Slider" type="HSlider" parent="ScrollContainer/VBoxContainer/TextSize"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
min_value = 5.0
value = 15.0
rounded = true

[node name="ChatTextSize" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/ChatTextSize"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]Chat font size:[/center]"
fit_content = true
script = ExtResource("2_4yg4i")

[node name="Text_Size_Slider" type="HSlider" parent="ScrollContainer/VBoxContainer/ChatTextSize"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
min_value = 5.0
value = 15.0
rounded = true

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
bbcode_enabled = true
text = "[center]Change Font[/center]"
fit_content = true
script = ExtResource("2_4yg4i")

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_pvipk")
stretch_mode = 5

[connection signal="value_changed" from="ScrollContainer/VBoxContainer/Fov/Fov_Slider" to="." method="_on_fov_slider_value_changed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer/TextureButton" to="." method="_font_changed"]
